[C] Timetable was fully created

--- a/consigliere/timetable.html
+++ b/consigliere/timetable.html
@@ -8,76 +8,23 @@
     <script src="scripts/timetable.js"></script>
 </head>
 <body>
-<div class="total-wrapper">
-    <div class="header">
-        <div class="header-title"> 
-            <img src="images/face.png">
-            <h1>Consigliere 2024</h1>
-        </div>
-        <div>
-            <a href="#game-1">Игра 1</a>
-            <a href="#game-2">Игра 2</a>
-            <a href="#game-3">Игра 3</a>
-            <a href="#game-4">Игра 4</a>
-            <a href="#game-5">Игра 5</a>
-            <a href="#game-6">Игра 6</a>
-            <a href="#game-7">Игра 7</a>
-            <a href="#game-8">Игра 8</a>
-        </div>
-    </div>
-    <div id="timetable">
-        <div id="game-1" class="game">
-            <p class="game-number">Игра 1</p>
-            <div class="mafia-table-wrapper">
-                <div class="mafia-table">
-                    <p>Стол 1</p>
-                    <table>
-                        <tr><td>1</td><td>Креветки из Инетки</td></tr>
-                        <tr><td>2</td><td>PZ⚡DC</td></tr>
-                        <tr><td>3</td><td>Банальная сказка</td></tr>
-                        <tr><td>4</td><td>Светик-Правдоцветик</td></tr>
-                        <tr><td>5</td><td>Клянусь, мы шериф</td></tr>
-                        <tr><td>6</td><td>Котики</td></tr>
-                        <tr><td>7</td><td>Easy Win</td></tr>
-                        <tr><td>8</td><td>Лучшие пупсики на вашу вечеринку</td></tr>
-                        <tr><td>9</td><td>Суринамские мукоеды</td></tr>
-                        <tr><td>10</td><td>Психические элементали</td></tr>
-                    </table>
-                </div>
-                <div class="mafia-table">
-                    <p>Стол 2</p>
-                    <table>
-                        <tr><td>1</td><td>DDniwe</td></tr>
-                        <tr><td>2</td><td>Бандюги</td></tr>
-                        <tr><td>3</td><td>KOD</td></tr>
-                        <tr><td>4</td><td>Top Gun</td></tr>
-                        <tr><td>5</td><td>Мы спалим твою овцу</td></tr>
-                        <tr><td>6</td><td>OCISLY</td></tr>
-                        <tr><td>7</td><td>Black hole</td></tr>
-                        <tr><td>8</td><td>Клан Бомбино</td></tr>
-                        <tr><td>9</td><td>Пёс да Лис 2.0</td></tr>
-                        <tr><td>10</td><td>The Witches</td></tr>
-                    </table>
-                </div>
-                <div class="mafia-table">
-                    <p>Стол 3</p>
-                    <table>
-                        <tr><td>1</td><td>Хочу тебя обнимать</td></tr>
-                        <tr><td>2</td><td>Руками не трогать, замечаний не делать</td></tr>
-                        <tr><td>3</td><td>Берем всё вино на себя</td></tr>
-                        <tr><td>4</td><td>Компот из, сука, фруктов</td></tr>
-                        <tr><td>5</td><td>Интроверты</td></tr>
-                        <tr><td>6</td><td>Крут и пряник</td></tr>
-                        <tr><td>7</td><td>Война и мир</td></tr>
-                        <tr><td>8</td><td>Mafia House</td></tr>
-                        <tr><td>9</td><td>Брестолочи</td></tr>
-                        <tr><td>10</td><td>Давай по новой, Миша</td></tr>
-                    </table>
-                </div>
+    <div class="total-wrapper">
+        <div class="header">
+            <div class="header-title"> 
+                <img src="images/face.png">
+                <h1>Consigliere 2024</h1>
+            </div>
+            <div>
+                <a href="#game-1">Игра 1</a>
+                <a href="#game-2">Игра 2</a>
+                <a href="#game-3">Игра 3</a>
+                <a href="#game-4">Игра 4</a>
+                <a href="#game-5">Игра 5</a>
+                <a href="#game-6">Игра 6</a>
+                <a href="#game-7">Игра 7</a>
+                <a href="#game-8">Игра 8</a>
             </div>
         </div>
+        <div id="timetable"></div>
     </div>
-</div>
 </body>
-<footer>
-</footer>
